--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <input id="descripcionSaludAlergia" name="descripcionSaludAlergia" type="text" maxlength="25">
           </div>
 
-          <button type="button" class="btn" id="toStep2">Siguiente — Elegir fecha 🗓️</button>
+          <button type="submit" class="btn" id="toStep2">Siguiente — Elegir fecha 🗓️</button>
         </form>
       </div>
 
@@ -227,7 +227,7 @@
       document.getElementById('raza').appendChild(opt);
     });
 
-    // Iniciar Choices después de cargar opciones
+    // Inicializar Choices
     document.addEventListener("DOMContentLoaded", () => {
       new Choices("#raza", {
         searchEnabled: true,
@@ -251,8 +251,9 @@
       }
     });
 
-    // Pasos
-    document.getElementById('toStep2').addEventListener('click', () => {
+    // Navegación de pasos
+    document.getElementById('toStep2').addEventListener('click', (e) => {
+      e.preventDefault();
       document.getElementById('step1').style.display = 'none';
       document.getElementById('step2').style.display = 'block';
       if (!window.calendarInitialized) initCalendar();
@@ -300,16 +301,27 @@
       window.calendarInitialized = true;
     }
 
-    document.getElementById('turnoManana').addEventListener('click', ()=>{
-      alert("✅ Turno mañana seleccionado correctamente.");
-      document.getElementById('step2').style.display = 'none';
-      document.getElementById('step3').style.display = 'block';
-    });
-    document.getElementById('turnoTarde').addEventListener('click', ()=>{
-      alert("✅ Turno tarde seleccionado correctamente.");
-      document.getElementById('step2').style.display = 'none';
-      document.getElementById('step3').style.display = 'block';
-    });
+    document.getElementById('turnoManana').addEventListener('click', ()=>enviarDatos('Mañana'));
+    document.getElementById('turnoTarde').addEventListener('click', ()=>enviarDatos('Tarde'));
+
+    async function enviarDatos(turno) {
+      const form = document.getElementById('formStep1');
+      const data = new FormData(form);
+      data.append('turno', turno);
+
+      try {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbx-qZl14ewHn0cCoaR7WQpmmiLlTiz-nE0sK2KcCR5_4YpQzBWkZD2qvYWjEYUHm6vvOg/exec", {
+          method: "POST",
+          body: data
+        });
+        const result = await response.text();
+        alert("✅ Turno guardado correctamente en la base de datos.\n" + result);
+        document.getElementById('step2').style.display = 'none';
+        document.getElementById('step3').style.display = 'block';
+      } catch (error) {
+        alert("❌ Error al guardar el turno. Verificá la conexión o el enlace de Google Script.");
+      }
+    }
   </script>
 </body>
 </html>
