--- a/index.html
+++ b/index.html
@@ -291,36 +291,40 @@
           const dispManana = Math.max(0, 6 - ocupManana);
           const dispTarde  = Math.max(0, 6 - ocupTarde);
 
-          const cuposBox = document.getElementById('cuposInfo');
-          cuposBox.textContent = `Disponibilidad del ${fecha}: 🌞 Mañana (${dispManana}/6) | 🌇 Tarde (${dispTarde}/6)`;
-          cuposBox.style.display = 'block';
+          const cuposInfo = document.getElementById('cuposInfo');
+          cuposInfo.style.display = 'block';
+          cuposInfo.textContent = `📅 ${fecha} — Mañana: ${dispManana} cupos | Tarde: ${dispTarde} cupos`;
+
           document.getElementById('turnoBtns').style.display = 'flex';
+          document.getElementById('turnoManana').onclick = () => enviarDatos(fecha, 'Mañana');
+          document.getElementById('turnoTarde').onclick = () => enviarDatos(fecha, 'Tarde');
         }
       });
       calendar.render();
       window.calendarInitialized = true;
     }
 
-    document.getElementById('turnoManana').addEventListener('click', ()=>enviarDatos('Mañana'));
-    document.getElementById('turnoTarde').addEventListener('click', ()=>enviarDatos('Tarde'));
-
-    async function enviarDatos(turno) {
+    // 🚀 ENVIAR A GOOGLE SHEETS
+    function enviarDatos(fecha, turno) {
       const form = document.getElementById('formStep1');
-      const data = new FormData(form);
-      data.append('turno', turno);
+      const datos = new FormData(form);
+      datos.append('fecha', fecha);
+      datos.append('turno', turno);
 
-      try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbx-qZl14ewHn0cCoaR7WQpmmiLlTiz-nE0sK2KcCR5_4YpQzBWkZD2qvYWjEYUHm6vvOg/exec", {
-          method: "POST",
-          body: data
-        });
-        const result = await response.text();
-        alert("✅ Turno guardado correctamente en la base de datos.\n" + result);
+      fetch('https://script.google.com/macros/s/AKfycbwXcRUtcf9ZQgLfFY7STgjK06aE93zEmB8uwgHv7zOeT3vW8JebSggWbYgkMHKmSSO-/exec', {
+        method: 'POST',
+        body: datos
+      })
+      .then(res => res.text())
+      .then(resp => {
+        alert('✅ Turno registrado correctamente.');
         document.getElementById('step2').style.display = 'none';
         document.getElementById('step3').style.display = 'block';
-      } catch (error) {
-        alert("❌ Error al guardar el turno. Verificá la conexión o el enlace de Google Script.");
-      }
+      })
+      .catch(err => {
+        console.error(err);
+        alert('❌ Error al registrar el turno.');
+      });
     }
   </script>
 </body>
