--- a/index.html
+++ b/index.html
@@ -67,23 +67,6 @@
       display: none;
     }
 
-    .qr-section { text-align: center; margin-top: 20px; }
-    .qr-section img { width: 220px; height: auto; border-radius: 10px; margin-bottom: 15px; }
-    .bank-info { text-align: left; margin: 0 auto; max-width: 420px; font-size: 16px; }
-    .bank-info p { display: flex; align-items: center; gap: 8px; margin: 6px 0; }
-
-    .info-box {
-      background-color: #fff3cd;
-      border: 1px solid #ffeeba;
-      color: #856404;
-      padding: 14px;
-      border-radius: 10px;
-      margin: 15px auto 25px auto;
-      max-width: 600px;
-      font-size: 15px;
-      line-height: 1.5;
-    }
-
     footer { background-color: #ffffff; border-top: 3px solid var(--turquesa); display: flex; justify-content: space-between; align-items: stretch; padding: 20px; flex-wrap: wrap; gap: 20px; margin-top: 40px; }
     footer iframe { border: none; border-radius: 12px; width: 48%; height: 250px; }
     footer .contacto { width: 48%; display: flex; flex-direction: column; justify-content: center; gap: 6px; font-size: 15px; }
@@ -107,20 +90,20 @@
           <input id="nombreDueno" name="nombreDueno" type="text" maxlength="20" required>
 
           <label for="celular">Celular *</label>
-          <input id="celular" name="celular" type="tel" maxlength="20" pattern="[0-9]{6,20}" title="Solo números, mínimo 6 dígitos" required>
+          <input id="celular" name="celular" type="tel" maxlength="20" pattern="[0-9]{6,20}" required>
 
           <label for="nombreMascota">Nombre de la mascota *</label>
           <input id="nombreMascota" name="nombreMascota" type="text" maxlength="15" required>
 
           <label for="edad">Edad *</label>
-          <input id="edad" name="edad" type="text" maxlength="3" pattern="[0-9]{1,3}" title="Solo números (máx. 3 cifras)" required>
+          <input id="edad" name="edad" type="text" maxlength="3" pattern="[0-9]{1,3}" required>
 
           <label for="raza">Raza *</label>
           <select id="raza" name="raza" required></select>
 
           <div id="razaOtra" style="display:none; margin-top:8px;">
             <label for="otraRaza">Especificá la raza *</label>
-            <input id="otraRaza" name="otraRaza" type="text" maxlength="15" placeholder="Escribí la raza">
+            <input id="otraRaza" name="otraRaza" type="text" maxlength="15">
           </div>
 
           <label for="tamano">Tamaño *</label>
@@ -155,7 +138,7 @@
       <!-- Paso 2 -->
       <div id="step2" style="display:none;">
         <h3>Seleccioná un día y turno disponible 🗓️</h3>
-        <p>Hora de ingreso: turno mañana (09:00) y turno tarde (13:00hs).</p>
+        <p>Hora de ingreso: mañana (09:00) o tarde (13:00).</p>
         <div id="calendar"></div>
         <div id="cuposInfo" class="cupos-info" aria-live="polite"></div>
         <div class="turno-btns" id="turnoBtns" style="display:none;">
@@ -168,151 +151,99 @@
       <!-- Paso 3 -->
       <div id="step3" style="display:none;">
         <h3>Datos para transferencia 💳</h3>
-        <div class="info-box">
-          📝 <b>Para agendar su turno 🐩</b> debe abonar una seña de <b>$5000</b> por transferencia o venir al local (09–17 hs).<br><br>
-          💬 La seña se descontará del total.
-        </div>
-
-        <div class="qr-section">
-          <img src="qr.png" alt="Código QR de pago">
-          <div class="bank-info">
-            <p>🏦 <b>CBU:</b> —</p>
-            <p>💬 <b>Alias:</b> Dog.club.lr</p>
-            <p>👤 <b>Cuenta a nombre de:</b> Claudio Enzo Jimenez</p>
-            <p>🪪 <b>DNI:</b> 20-35284426-9</p>
-            <p>🏛️ <b>Banco:</b> Mercado Pago</p>
-          </div>
-        </div>
-        <button class="btn secondary" id="volverPaso2">⬅️ Volver</button>
+        <p>Aboná la seña de $5000 por transferencia (CBU o alias en QR).</p>
+        <img src="qr.png" alt="Código QR de pago" width="200">
       </div>
     </div>
   </div>
 
-  <!-- Footer -->
-  <footer>
-    <iframe src="https://www.google.com/maps?q=Av.+Ángel+Vicente+Peñaloza,+F5300+La+Rioja&output=embed" allowfullscreen="" loading="lazy"></iframe>
-
-    <div class="contacto">
-      <p>📍 <b>Dirección:</b> Av. Ángel Vicente Peñaloza, F5300 La Rioja</p>
-      <p>📧 <b>Email:</b> contacto@dogclub.com</p>
-      <p>📸 <b>Instagram:</b> <a href="https://www.instagram.com/dog_clubb/" target="_blank">@dog_clubb</a></p>
-      <p>📱 <b>WhatsApp:</b> <a href="https://api.whatsapp.com/message/YIYD6PN5YHWSL1?autoload=1&app_absent=0" target="_blank">+54 9 3804 104255</a></p>
-    </div>
-  </footer>
-
   <script>
-    // Mostrar campo de alergia
     document.querySelectorAll('input[name="saludAlergia"]').forEach(radio => {
       radio.addEventListener('change', e => {
         document.getElementById('campoSaludAlergia').style.display = (e.target.value === 'Si') ? 'block' : 'none';
       });
     });
 
-    // Cargar razas
-    const razasArray = [
-      "Caniche","Labrador Retriever","Pastor Alemán","Golden Retriever","Bulldog Francés",
-      "Beagle","Pomerania","Border Collie","Schnauzer","Cocker Spaniel","Dálmata","Boxer",
-      "Rottweiler","Shih Tzu","Bichon Frisé","Bulldog Inglés","Fox Terrier","Mastín",
-      "Akita","Siberian Husky","Chihuahua","Pinscher","Pequinés","Australian Shepherd",
-      "Boston Terrier","Husky Siberiano","Otro"
-    ];
+    const razasArray = ["Caniche","Labrador Retriever","Golden Retriever","Beagle","Otro"];
     razasArray.forEach(r => {
       const opt = document.createElement('option');
-      opt.value = r; opt.textContent = r;
+      opt.value = r;
+      opt.textContent = r;
       document.getElementById('raza').appendChild(opt);
     });
 
-    document.addEventListener("DOMContentLoaded", () => {
-      new Choices("#raza", {
-        searchEnabled: true,
-        shouldSort: false,
-        itemSelectText: '',
-        placeholderValue: 'Buscar raza...',
-        searchResultLimit: 50,
-        fuseOptions: { threshold: 0.3 }
-      });
-    });
-
-    document.getElementById('raza').addEventListener('change', e => {
+    document.getElementById('raza').addEventListener('change', function(e){
       const v = e.target.value;
-      if (v && v.toLowerCase() === 'otro') {
-        document.getElementById('razaOtra').style.display = 'block';
-        document.getElementById('otraRaza').setAttribute('required','required');
-      } else {
-        document.getElementById('razaOtra').style.display = 'none';
-        document.getElementById('otraRaza').removeAttribute('required');
-      }
+      document.getElementById('razaOtra').style.display = (v === 'Otro') ? 'block' : 'none';
     });
 
-    // Navegación
-    document.getElementById('toStep2').addEventListener('click', e => {
+    document.getElementById('toStep2').addEventListener('click', (e) => {
       e.preventDefault();
       document.getElementById('step1').style.display = 'none';
       document.getElementById('step2').style.display = 'block';
       if (!window.calendarInitialized) initCalendar();
     });
+
     document.getElementById('volverPaso1').addEventListener('click', () => {
       document.getElementById('step2').style.display = 'none';
       document.getElementById('step1').style.display = 'block';
-    });
-    document.getElementById('volverPaso2').addEventListener('click', () => {
-      document.getElementById('step3').style.display = 'none';
-      document.getElementById('step2').style.display = 'block';
+      document.getElementById('cuposInfo').style.display = 'none';
+      document.getElementById('turnoBtns').style.display = 'none';
     });
 
-    // CALENDARIO
     function initCalendar() {
-      const calendarEl = document.getElementById('calendar');
-      const calendar = new FullCalendar.Calendar(calendarEl, {
+      const calendar = new FullCalendar.Calendar(document.getElementById('calendar'), {
         initialView: 'dayGridMonth',
         selectable: true,
         editable: false,
-        height: "auto",
         headerToolbar: { left: 'prev,next today', center: 'title', right: '' },
         validRange: { start: new Date().toISOString().split('T')[0] },
-        dateClick: info => {
-          const day = info.date.getDay();
-          if (day === 0) return alert("🚫 Domingo está cerrado.");
-
+        dateClick: async function(info) {
           const fecha = info.dateStr;
+          const cuposInfo = document.getElementById('cuposInfo');
+          cuposInfo.style.display = 'block';
+          cuposInfo.textContent = "⏳ Cargando disponibilidad...";
 
-          // 🔹 Consultar cupos reales desde Google Sheets
-          fetch("https://script.google.com/macros/s/AKfycbx-qZl14ewHn0cCoaR7WQpmmiLlTiz-nE0sK2KcCR5_4YpQzBWkZD2qvYWjEYUHm6vvOg/exec?fecha=" + fecha)
-            .then(res => res.json())
-            .then(data => {
-              const dispManana = data.manana;
-              const dispTarde = data.tarde;
-              const cuposInfo = document.getElementById('cuposInfo');
-              cuposInfo.style.display = 'block';
-              cuposInfo.textContent = `📅 ${fecha} — Mañana: ${dispManana} cupos | Tarde: ${dispTarde} cupos`;
-              document.getElementById('turnoBtns').style.display = 'flex';
-              document.getElementById('turnoManana').onclick = () => registrarTurno(fecha, 'Mañana');
-              document.getElementById('turnoTarde').onclick = () => registrarTurno(fecha, 'Tarde');
-            })
-            .catch(() => alert("⚠️ Error al obtener cupos desde la base de datos."));
+          try {
+            const resp = await fetch(`https://script.google.com/macros/s/AKfycbx-qZl14ewHn0cCoaR7WQpmmiLlTiz-nE0sK2KcCR5_4YpQzBWkZD2qvYWjEYUHm6vvOg/exec?fecha=${fecha}`);
+            const data = await resp.json();
+            if (data.error) {
+              cuposInfo.textContent = "⚠️ Error al obtener cupos.";
+              return;
+            }
+
+            cuposInfo.textContent = `📅 ${fecha} — Mañana: ${data.turnoManana}/6 | Tarde: ${data.turnoTarde}/6`;
+
+            document.getElementById('turnoBtns').style.display = 'flex';
+            document.getElementById('turnoManana').onclick = () => enviarDatos(fecha, 'Mañana');
+            document.getElementById('turnoTarde').onclick = () => enviarDatos(fecha, 'Tarde');
+          } catch (err) {
+            console.error(err);
+            cuposInfo.textContent = "❌ Error al conectar con el servidor.";
+          }
         }
       });
       calendar.render();
       window.calendarInitialized = true;
     }
 
-    // 🔹 Envío a Google Sheets
-    function registrarTurno(fecha, turno) {
+    function enviarDatos(fecha, turno) {
       const form = document.getElementById('formStep1');
-      const data = new FormData(form);
-      data.append('fecha', fecha);
-      data.append('turno', turno);
+      const datos = new FormData(form);
+      datos.append('fecha', fecha);
+      datos.append('turno', turno);
 
-      fetch("https://script.google.com/macros/s/AKfycbx-qZl14ewHn0cCoaR7WQpmmiLlTiz-nE0sK2KcCR5_4YpQzBWkZD2qvYWjEYUHm6vvOg/exec", {
+      fetch('https://script.google.com/macros/s/AKfycbx-qZl14ewHn0cCoaR7WQpmmiLlTiz-nE0sK2KcCR5_4YpQzBWkZD2qvYWjEYUHm6vvOg/exec', {
         method: 'POST',
-        body: data
+        body: datos
       })
-      .then(r => r.text())
+      .then(res => res.text())
       .then(() => {
+        alert('✅ Turno registrado correctamente.');
         document.getElementById('step2').style.display = 'none';
         document.getElementById('step3').style.display = 'block';
       })
-      .catch(() => alert("⚠️ Error al registrar el turno."));
+      .catch(() => alert('❌ Error al registrar el turno.'));
     }
   </script>
 </body>
